# cs240lx-riscv-lab

./: .gitignore  Cargo.toml  README.md
0-test-boot/: simple.ld
1-min-crate/: Cargo.toml
1-min-crate/.cargo/: config.toml
1-min-crate/src/: bootrom.rs  main.rs
engrave-uf2/: Cargo.toml
engrave-uf2/src/: main.rs
old/0-test-boot/: Makefile  simple.S  simple.uf2
old/1-min-crate/: Cargo.toml  Makefile  lab1.uf2  rp2350.ld
old/1-min-crate/.cargo/: config.toml
old/1-min-crate/src/: main.rs
staff/: Cargo.toml  RUST.md
staff/engrave-uf2/src/: main.rs
staff/okboot/: Cargo.toml  Makefile  okboot.uf2  rp2350.ld  test.S  test.ld
staff/okboot-common/src/: lib.rs
staff/okboot/.cargo/: config.toml
staff/okboot/src/: bootrom.rs  legacy.rs  main.rs  protocol.rs  stub.rs
staff/okboot/src/legacy/: fmt.rs  staging.rs  uart1.rs
staff/okboot/src/protocol/: handshake.rs  v2.rs
staff/okdude/: Cargo.toml
staff/okdude/src/: echo.rs  main.rs  upload.rs  v2.rs
staff/quartz/: Cargo.toml
staff/quartz/src/: arch.rs  device.rs  lib.rs  sync.rs
staff/quartz/src/arch/hazard3/: clocks.rs
staff/quartz/src/device/: rp2350.rs  timing.rs  uart.rs
staff/quartz/src/device/bcm2835/: timing.rs
