[package]
name = "engrave-uf2"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
proc-bitfield = { version = "0.5.2", features = ["nightly"] }
elf = { version = "0.7.4", features = ["std"] }
eyre = "0.6.12"
bytemuck = { version = "1.22.0", features = ["derive", "min_const_generics"] }