[package]
name = "quartz"
version = "0.1.0"
edition = "2024"

[lib]
test = false

[features]
bcm2835 = ["bcm2835-lpa"]
rp2350 = ["rp235x-pac"]

[dependencies]
lock_api = { version = "0.4.12", default-features = false }
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
proc-bitfield = "0.5.2"

bcm2835-lpa = { version = "0.4.0", optional = true }
rp235x-pac = { version = "0.1.0", optional = true }
